@@ -1,3 +1,7 @@
+bobcat (1.15.1) (TO BE RELEASED)
+
+  * Leftover `String' in string/unescape replaced by `string'
+    
 bobcat (1.15.0)
 
   * The Glob constructor no longer requires a static_cast when multiple flags
